--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "match-sorter": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-time-picker": "^7.0.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10"
   },
