--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-share": "^5.1.2",
     "react-time-picker": "^7.0.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10"
