--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@material-tailwind/react": "^2.1.10",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "dateformat": "^5.0.3",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
