--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "moment": "^2.30.1",
+    "motion": "^12.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
     "react-datetime-picker": "^6.0.1",
