--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-minimal-pie-chart": "^9.1.0",
     "react-router-dom": "^7.1.1",
     "react-share": "^5.1.2",
     "react-time-picker": "^7.0.0",
